--- a/ehr/client/src/assets/styles/App.css
+++ b/ehr/client/src/assets/styles/App.css
@@ -25,6 +25,7 @@ main {
   z-index: 100 !important;
 }
 
+/*
 footer {
   position: fixed;
   bottom: 0;
@@ -33,6 +34,17 @@ footer {
   height: 50px;
   background-color: #1d1d1d;
 }
+*/
+
+footer {
+background-color: #1d1d1d;
+position: fixed; /* this keeps header at bottom of page */
+bottom: 0;
+width: 100%;
+height: 60px;
+z-index: 1;
+}
+
 
 .App-logo {
   height: 40vmin;
