--- a/ehr/client/src/assets/styles/footer.css
+++ b/ehr/client/src/assets/styles/footer.css
@@ -1,9 +1,10 @@
-/* footer styles */
+/* footer styles 
 .footer {
-    background-color: #e9ecef;
+    background-color: #1d1d1d;
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 50px;
   }
 
   .footerText {
@@ -11,12 +12,24 @@
     padding: 15px;
   }
 
-/* styles to get footer to stay at bottom of page */  
+  */
+/* styles to get footer to stay at bottom of page 
 .main {
         min-height: 100vh; /* will cover the 100% of viewport */
-        overflow: hidden;
+      /*  overflow: hidden;
         display: block;
         position: relative;
         padding-bottom: 90px; /* height of your footer */
        
-}  
+/*}  */
+
+/*
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: #1d1d1d;
+}
+*/
